# swagger/swagger.json
@@ -55,7 +55,7 @@
                     "admin/kindergarten"
                 ],
                 "description": "设置园长",
-                "operationId": "KindergartenController.添加园长/教师/学生到幼儿园 未激活状态",
+                "operationId": "KindergartenController.添加园长/教师到幼儿园 未激活状态",
                 "parameters": [
                     {
                         "in": "path",
@@ -5779,6 +5779,100 @@
                     },
                     "1003": {
                         "description": "发布失败"
+                    }
+                }
+            }
+        },
+        "/task/work_tasks/complete": {
+            "put": {
+                "tags": [
+                    "task/work_tasks"
+                ],
+                "description": "完成任务",
+                "operationId": "WorkTaskController.完成任务",
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "task_id",
+                        "description": "任务ID",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "operator",
+                        "description": "操作人",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "courseware_id",
+                        "description": "课件ID",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "courseware_name",
+                        "description": "课件名称",
+                        "type": "string"
+                    },
+                    {
+                        "in": "formData",
+                        "name": "upload_time",
+                        "description": "上传课件时间",
+                        "schema": {
+                            "$ref": "#/definitions/.time"
+                        }
+                    }
+                ],
+                "responses": {
+                    "0": {
+                        "description": "{int} models.Feedback.Id"
+                    },
+                    "1001": {
+                        "description": "参数验证"
+                    },
+                    "1003": {
+                        "description": "操作失败"
+                    }
+                }
+            }
+        },
+        "/task/work_tasks/schedule": {
+            "get": {
+                "tags": [
+                    "task/work_tasks"
+                ],
+                "description": "获取任务进度",
+                "operationId": "WorkTaskController.获取任务进度",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "task_id",
+                        "description": "任务ID",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "status",
+                        "description": "任务状态",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "0": {
+                        "description": "{int} models.Feedback.Id"
+                    },
+                    "1005": {
+                        "description": "获取失败"
                     }
                 }
             }
